Added help entry which describes supported container types
 Fixes #19

--- a/static/css/containers.css
+++ b/static/css/containers.css
@@ -30,3 +30,8 @@
 .containers-edit:hover > a.movePlaceButton {
     visibility: visible;
 }
+
+/* Help dialog - legend label position */
+.legend-label {
+    padding-top: 14px;
+}
