Rewrote code for marker popups to use Underscore template

--- a/templates/index.html
+++ b/templates/index.html
@@ -239,6 +239,14 @@
         </div>
     </div>
 </script>
+<script type="text/template" id="popupTemplate">
+    <div class="text-center containers-edit">
+        <strong><%= place_name %></strong>
+        <br />
+        <span><%= time_from %> - <%= time_to %></span>
+        <a class="btn btn-link btn-xs movePlaceButton" href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+    </div>
+</script>
 <script type="text/javascript" src="js/containers.js"></script>
 
 </body>
