Rewrote code for marker popup when locating place to use Underscore template

--- a/templates/index.html
+++ b/templates/index.html
@@ -247,6 +247,11 @@
         <a class="btn btn-link btn-xs movePlaceButton" href="#"><span class="glyphicon glyphicon-pencil"></span></a>
     </div>
 </script>
+<script type="text/template" id="locatePopupTemplate">
+    <p>Umístěte mne na místo <%= place_name %></p>
+    <button id="setPlaceOkButton" type="button" class="btn btn-primary btn-sm btn-block"">Hotovo</button>
+    <button id="setPlaceCancelButton" type="button" class="btn btn-link btn-sm btn-block"">Zrušit</button>
+</script>
 <script type="text/javascript" src="js/containers.js"></script>
 
 </body>
