--- a/templates/index.html
+++ b/templates/index.html
@@ -150,9 +150,9 @@
 
 <div id="map"></div>
 <div id="loading" style="display:block;">
-    <div class="loading-indicator">
-        <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-info" style="width: 100%"></div>
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped active"  role="progressbar" style="width: 100%">
+            <span>Nahrávám...</span>
         </div>
     </div>
 </div>
