Removed title "bulk waste containers" since application supports more container types now

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Velkoobjemový odpad v Praze 8</title>
+    <title>Odpadní kontejnery</title>
 
     <!-- Core CSS -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -135,14 +135,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Velkoobjemový odpad</a>
+            <a class="navbar-brand" href="#">Odpadní kontejnery</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav container-filter">
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown container-unknown-places"></li>
-                <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;O aplikaci</a></li>
+                <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;Nápověda</a></li>
             </ul>
         </div><!--/.navbar-collapse -->
     </div>
@@ -162,7 +162,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">O aplikaci</h4>
+                <h4 class="modal-title">Nápověda</h4>
             </div>
 
             <div class="modal-body">
@@ -178,7 +178,7 @@
                         <div class="panel-group" id="legendItems"></div>
                     </div>
                     <div class="tab-pane fade in" id="what">
-                        <p>Hlavním účelem aplikace je zobrazovat mapu různých typů kontejnerů na odpad v Praze 8 v určitý den. Dále umožňuje tyto akce:</p>
+                        <p>Hlavním účelem aplikace je zobrazovat mapu různých typů kontejnerů na odpad v Praze v určitý den. Dále umožňuje tyto akce:</p>
                         <table class="table">
                             <tr><td>
                                 <ul>
