Added link to releases on Github
Also changed links to other webs to open in new windows.

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
                                 </ul>
                             </td></tr>
                         </table>
-                        <h6 class="text-right"><small>Verze: {{=it.version}}</small></h6>
+                        <h6 class="text-right"><a href="https://github.com/saxicek/odpad-praha8.cz/releases" target="_blank"><small>Verze: {{=it.version}}</small></a></h6>
                     </div>
                     <div class="tab-pane fade in" id="who">
                         <dl>
@@ -199,12 +199,12 @@
                     </div>
                     <div class="tab-pane fade in" id="why">
                         <p>Neznám Prahu natolik dobře, abych si uměl vybrat kontejner na odpad pouze podle jména ulice
-                            (typické pro stránky Prahy, například <a href="http://www.praha8.cz/Odpady.html">http://www.praha8.cz/Odpady.html</a>).
+                            (typické pro stránky Prahy, například <a href="http://www.praha8.cz/Odpady.html" target="_blank">http://www.praha8.cz/Odpady.html</a>).
                             A navíc aby kontejner byl poblíž mého bydliště; ideálně dnes nebo zítra, ... Tak jsem data vizualizoval.</p>
                     </div>
                     <div class="tab-pane fade in" id="how">
                         <p>Hlavní použité technologie jsou Node.js, Bootstrap, Leaflet.js, Postgresql, OpenShift. Projekt je
-                        zveřejněný pod volnou licencí na <a href="https://github.com/saxicek/odpad-praha8.cz">GitHubu</a>,
+                        zveřejněný pod volnou licencí na <a href="https://github.com/saxicek/odpad-praha8.cz" target="_blank">GitHubu</a>,
                             uvítám pull requesty a <a href="https://github.com/saxicek/odpad-praha8.cz/issues/new" target="_blank">hlášení chyb</a>. :-) </p>
                     </div>
                 </div>
