--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="content-language" content="cs" />
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="description" content="Aplikace pro mapové zobrazení různých typů kontejnerů na odpad v daný den." />
+    <meta name="author" content="Libor Nenadál" />
+    <meta name="google-site-verification" content="ImHUucJmrAx0e5JiobsfiPUuogmi9Kz2Lzg1gXmexLQ" />
     <title>Odpadní kontejnery</title>
 
     <!-- Core CSS -->
