--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,7 @@
     <!-- Core CSS -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="lib/leaflet/leaflet.css" rel="stylesheet" type="text/css">
-    <link href="lib/Leaflet.awesome-markers/leaflet.awesome-markers.css" rel="stylesheet" type="text/css">
-    <link href="css/containers.css" rel="stylesheet" type="text/css">
+    <link href="css/containers.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <style>
