--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-language" content="cs" />
     <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="description" content="Aplikace pro mapové zobrazení různých typů kontejnerů na odpad v daný den." />
+    <meta name="description" content="Zobrazuje na mapě kontejnery na odpad v Praze podle harmonogramu přistavení." />
     <meta name="author" content="Libor Nenadál" />
     <meta name="google-site-verification" content="ImHUucJmrAx0e5JiobsfiPUuogmi9Kz2Lzg1gXmexLQ" />
     <title>Odpadní kontejnery</title>
