Added debug parameter to index page
Request "GET /" returns HTML page with minimized JS script (containers.min.js). If debug parameter is specified (i.e. "GET /?debug") then HTML page with containers.js script is returned. That way it is possible to debug on production environment.

--- a/templates/index.html
+++ b/templates/index.html
@@ -252,7 +252,12 @@
     <button id="setPlaceOkButton" type="button" class="btn btn-primary btn-sm btn-block"">Hotovo</button>
     <button id="setPlaceCancelButton" type="button" class="btn btn-link btn-sm btn-block"">Zrušit</button>
 </script>
+
+{{? it.debug }}
 <script type="text/javascript" src="js/containers.js"></script>
+{{??}}
+<script type="text/javascript" src="js/containers.min.js"></script>
+{{?}}
 
 </body>
 </html>
