Added Apple app icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,14 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/containers.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Apple touch icons -->
+    <link rel="apple-touch-icon" href="img/touch_icons/Icon.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/touch_icons/Icon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/touch_icons/Icon-60@2x.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/touch_icons/Icon-60@3x.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/touch_icons/Icon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/touch_icons/Icon-76@2x.png">
+
     <!-- Custom styles for this template -->
     <style>
         html, body, #map {
