--- a/templates/scrape_status.html
+++ b/templates/scrape_status.html
@@ -11,7 +11,7 @@
 
     <!-- Core CSS -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/containers.css" rel="stylesheet" type="text/css">
+    <link href="/css/containers.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
