Added link to scrape status page from help dialog

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                         <div class="panel-group" id="legendItems"></div>
                     </div>
                     <div class="tab-pane fade in" id="what">
-                        <p>Hlavním účelem aplikace je zobrazovat mapu různých typů kontejnerů na odpad v Praze v určitý den. Dále umožňuje tyto akce:</p>
+                        <p>Hlavním účelem aplikace je zobrazovat mapu různých typů kontejnerů na odpad v Praze v určitý den. Data se sbírají <a href="status/scrape" target="_blank">automaticky</a> ze stránek městských částí. Dále umožňuje tyto akce:</p>
                         <table class="table">
                             <tr><td>
                                 <ul>
