Fixed invalid HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -164,8 +164,8 @@
 </script>
 <script type="text/template" id="locatePopupTemplate">
     <p>Umístěte mne na místo <%= place_name %></p>
-    <button id="setPlaceOkButton" type="button" class="btn btn-primary btn-sm btn-block"">Hotovo</button>
-    <button id="setPlaceCancelButton" type="button" class="btn btn-link btn-sm btn-block"">Zrušit</button>
+    <button id="setPlaceOkButton" type="button" class="btn btn-primary btn-sm btn-block">Hotovo</button>
+    <button id="setPlaceCancelButton" type="button" class="btn btn-link btn-sm btn-block">Zrušit</button>
 </script>
 
 {{? it.debug }}
